--- a/juliettehomepage.html
+++ b/juliettehomepage.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="mystyle2.css">
+    <title>Home</title>
 </head>
 <body>
     <h1>Click The Links To Do Different Activities!</h1>
@@ -9,6 +10,21 @@
     <br>
 
 <a href="juliettechangethebackgroundcolor.html"> CHANGE THE BACKGROUND COLOR! </a>
+
+<br>
+<br>
+
+<a href="julietteromannumeral.html"> ROMAN NUMERAL CONVERTER! </a>
+
+<br>
+<br>
+
+<a href="julietteareaofatriangle.html"> CALCULATE THE AREA OF A TRIANGLE! </a>
+
+<br>
+<br>
+
+<a href="juliettetipcalculator.html"> CALCULATE YOUR TIP! </a>
 
 </body>
 </html>
